--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -26,7 +26,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'com.h2database:h2'
+	//runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	// Jackson Databind
@@ -36,6 +36,9 @@ dependencies {
   	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.12.1'
   	// JUnitのテスト用
   	//implementation 'org.junit.jupiter.api';
+  	// postgreSQL用
+  	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+  	runtimeOnly 'org.postgresql:postgresql'
 }
 
 tasks.named('test') {
