--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 # JDBCドライバを指定
-spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.driver-class-name=org.h2.Driver
 # データベースのURL。メモリ上にtestdbを作成しますよ、と指定。
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.username=sa
+#spring.datasource.password=
+
+spring.jpa.database=POSTGRESQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/demoDB
+spring.datasource.username=postgres
+spring.datasource.password=er198hasrery9w8
+
 # コンソールを有効化
 spring.h2.console.enabled=true
 
