住所検索機能の実装

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.messages.basename=messages,validationMessages
 
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
+
+#住所検索APIのURL
+spring.addresssearchapiurl=https://zip-cloud.appspot.com/api/search?zipcode=%s
