--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -3,10 +3,12 @@ plugins {
 	id 'org.springframework.boot' version '2.7.7'
 	id 'io.spring.dependency-management' version '1.1.0'
 }
-
 group = 'com.example'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+sourceCompatibility = '11'
+bootJar{
+    archiveFileName = 'training.jar'
+  // 生成されるファイル：test.jar
+}
 
 configurations {
 	compileOnly {
