--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -41,6 +41,10 @@ dependencies {
   	// postgreSQL用
   	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
   	runtimeOnly 'org.postgresql:postgresql'
+  	// Spring Security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+	ext['spring-security.version']='6.1.0'
 }
 
 tasks.named('test') {
